Step 5c: clear SpotBugs backlog in entity-meta-processor + generator-lib (49 -> 0)
entity-meta-processor (10 -> 0):
- delete dead isCompanion() (return field != null && field == null) and its filter call
- delete unread SimpleTypeVisitor14 field 'yy' and its now-unused import
- EntityTypeInfo.isBoolean: exact equals() set instead of equalsIgnoreCase (IMPROPER_UNICODE)
- @SuppressFBWarnings with justification: IMPROPER_UNICODE on getTypeName (ASCII type names),
  FORMAT_STRING_MANIPULATION/VA_FORMAT_STRING_USES_NEWLINE on MetaSourceCodeGenerator
  (compile-time source emitter; \n line breaks are intentional), REC_CATCH_EXCEPTION on
  IntrospectAnnotationProcessor (wraps any generation failure as a compiler diagnostic)
- add spotbugs-annotations (provided)

entity-meta-generator-lib (29 -> 0):
- data-holder records get compact canonical constructors that List.copyOf their list
  components: Schema, EntityField, EntityMethod, EntityParameter
- DefaultMeta / EntityConstructor: List.copyOf stored lists
- EntityAnnotation.getProperties(): return Collections.unmodifiableMap
- EntityTransform: store List.of(targetClass); add NoSuchElementException guard to the
  byte[] iterator's next() (IT_NO_SUCH_ELEMENT)
- TemporalEntityTransform: handle LocalDateTime explicitly, throw IllegalArgumentException
  for any other Temporal instead of an unchecked cast (BC_UNCONFIRMED_CAST)
- MetaRepository/SchemaRepository/EntityHelper: catch ReflectiveOperationException |
  RuntimeException instead of bare Exception (REC_CATCH_EXCEPTION)
- delete unused EntityHelper.converters() accessor (MS_EXPOSE_REP)
- NumberEntityTransformTest: lambda Iterable instead of stored-iterator anon class

Full entity-meta-generator reactor builds green; 58 tests pass.

Claude-Session: https://claude.ai/code/session_01NPDwrWfZiPrqFi82NBLpSK